--- a/views/enroll.ejs
+++ b/views/enroll.ejs
@@ -5,6 +5,7 @@
        <li>학생이름 : <input type="text" name="name" required></li>
        <li>주민번호 : <input type="text" name="resident_no" size="10" maxlength="6" required> - <input type="password" name="resident_no1" size="10" maxlength="7" required></li>
        <li>주소 : <input type="text" name="address"></li>
+       <li>학부모 이메일 : <input type="text" name="email" placeholder="cas@cas.re.kr" required></li>
        <li>학부모 연락처 : <input type="text" name="pr_phone" oninput="phoneAutoHyphen(this)" maxlength="13" placeholder="휴대 전화번호" required></li>
        <li>출석교회 : <input type="text" name="church"></li>
        <li>출석교회 연락처 : <input type="text" name="ch_phone" oninput="localAutoHyphen(this)" maxlength="13" placeholder="지역 전화번호" autofocus></li>
