--- a/views/enrolllist.ejs
+++ b/views/enrolllist.ejs
@@ -8,6 +8,7 @@
         <th>영어이름</th>
         <th>아이디</th>
         <th>주민번호</th>
+        <th>학부모 이메일</th>
         <th>구분</th>
         <th>In-day</th>
         <th>Out-day</th>
@@ -31,6 +32,7 @@
         <td><%=item.nick_name%></td>
         <td><%=item.member_id%></td>
         <td><%=item.resident_no%></td>
+        <td><%=item.email%></td>
         <td><%=item.position%></td>
         <td><%=item.reg_date%></td>
         <td><%=item.expire_date%></td>
