--- a/views/medit.ejs
+++ b/views/medit.ejs
@@ -1,6 +1,7 @@
 <%-include('header.ejs')%>
 
-<a href="/meditlist" style="color:black; text-decoration:none; font-size: 24px; -webkit-text-stroke: 0.5px orange; padding-left: 0.2rem; vertical-align: top; ">묵상 리스트 보기</a>
+<a href="/meditlist" style="color:black; text-decoration:none; font-size: 24px; -webkit-text-stroke: 0.5px orange; padding-left: 0.2rem; vertical-align: top;
+position:relative; left:1rem; top:1rem; ">묵상 리스트 보기</a>
 
 <form action="/meditProc" method="post">
        <ul style="line-height: 2em;">
