--- a/views/meditlist.ejs
+++ b/views/meditlist.ejs
@@ -4,24 +4,25 @@
 <table border=1>
     <tr>
         <th>idx</th>
-        
+        <th>이름</th>
         <th>성경본문</th>
         <th>제목</th>
         <th>내용</th>
        
         
     </tr>
-    <% lists.forEach(function(item){ %>
+<% lists.forEach(function(item){ %>
     <tr>
         <td><%=item.idx%></td>
-        
+        <td><%=item.name%></td>
         <td><%=item.bible_v%></td>
         <td><%=item.title%></td>
         <td><%-item.memo.replaceAll("\n","<br>")%></td>
-        
         <td><a href="/meditdelete?idx=<%=item.idx%>" onclick="return confirm('정말로 삭제하겠습니까?')">삭제</a></td>
+        <td><a href="/meditupdate?idx=<%=item.idx%>" onclick="return confirm('수정하시겠습니까?')">수정</a></td>
     </tr>
-    <% }) %>
+   
+<% }) %>
 </table>
     
 <%-include('footer.ejs')%>
